[package]
name = "tfidf_sparsevec"
version = "0.1.0"
authors = ["Aleksandr Gamble <aleksandr.gamble@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# for stemming words
rust-stemmers = "1.2.0"
# for fast, portable hashing
seahash = "4.0.0"

